--- a/config/epic_robot.yaml
+++ b/config/epic_robot.yaml
@@ -1,26 +1,18 @@
 piper:
   robot:
-    mobile_base: true #
-    DOF: 3 #
-    arm_base: {orientation: [0], position: [0.0, 0.0]} #
-    DH:
-      alpha: []
-      a: []
-      d: []
-      theta: []
-      theta_neg: []
+    mobile_base: true
+    DOF: 3
+    arm_base: 
+      orientation: [0, 0, 0, 1]
+      position: [0, 0, 0]
     spheres:
-      js: [0] #
-      xs: [0] #
-      ys: [0] #
-      zs: [0] #
-      rs: [40] #
-    arm_joint_names: [] #
-    sensor_arm_sigma: 0.0001
+      js: [0]
+      xs: [0]
+      ys: [0]
+      zs: [0]
+      rs: [40]
     sensor_base_sigma: 0.0001
-    trajectory_control_topic: /vector/full_body_controller/trajectory
+    trajectory_control_topic: /epic_robot/trajectory
     est_traj_pub_topic: /piper/est_traj
     plan_traj_pub_topic: /piper/plan_traj
-    arm_state_topic:
     base_state_topic: /base_state
-    
